chore: cleanup and add packages to brewfile

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -16,11 +16,14 @@ brew 'lazydocker'
 brew 'jq'
 brew 'make'
 brew 'neovim'
+brew 'pv'
 brew 'sqlite'
 brew 'stow'
 brew 'starship'
 brew 'tmux'
 brew 'tree'
+brew 'openssl'
+brew 'unzip'
 brew 'wget'
 brew 'zsh-autosuggestions'
 
