feat(git): update git config with global ignore

--- a/stow/gitconfig/.gitconfig
+++ b/stow/gitconfig/.gitconfig
@@ -1,10 +1,17 @@
 # Global .gitconfig
+[core]
+	excludesfile = ~/.config/git/.gitignore_global
+
 [init]
-  defaultBranch = main
+	defaultBranch = main
 
 [user]
-	name = Michael Yocca
-  email = mjyocca@gmail.com
+  name = Michael Yocca
+  email = 19916665+mjyocca@users.noreply.github.com
+
+[alias]
+	fza = "!git ls-files -m -o --extend-standard | fzf --print0 -m | xargs -0 -t -o git add"
+	cpb = "!git rev-parse --abbrev-ref HEAD | tr -d '\n' | pbcopy"
 
 # Per parent directory settings
 ; [includeIf "gitdir:~/Projects/Development/work/"]
@@ -12,7 +19,3 @@
 ;
 ; [includeIf "gitdir:~/Projects/Development/personal/"]
 ;   path = .gitconfig-personal
-
-[alias]
-fza = "!git ls-files -m -o --extend-standard | fzf --print0 -m | xargs -0 -t -o git add"
-cpb = "!git rev-parse --abbrev-ref HEAD | tr -d '\n' | pbcopy"
