chore: update brewfile casks and bins

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -18,6 +18,7 @@ brew 'jq'
 brew 'make'
 brew 'neovim'
 brew 'pv'
+brew 'ripgrep' # required for telescope
 brew 'sqlite'
 brew 'stow'
 brew 'starship'
@@ -35,4 +36,6 @@ brew 'zsh-autosuggestions'
 # cask 'visual-studio-code'
 # cask 'zed'
 # cask 'zen-browser'
-# cask 'keycastr'
+# cask 'keycastor'
+cask 'qmk-toolbox'
+cask 'alacritty'
