--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -2,8 +2,8 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g prefix C-s
-
 set -g mouse on
+set-window-option -g mode-keys vi
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -15,6 +15,7 @@ set-option -g status-position top
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#latest' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # ~ 'catppuccin/tmux#latest' Configuration ~
 set -g @catppuccin_window_left_separator ""
@@ -32,13 +33,16 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_directory_text "#{pane_current_path}"
 # ~ 'catppuccin/tmux#latest' Configuration ~
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
 
-
+set -g @catppuccin_status_background "default"
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
