feat(starship): add os symbols

--- a/stow/starship/.config/starship.toml
+++ b/stow/starship/.config/starship.toml
@@ -51,3 +51,29 @@ $character"""
 
 [fill]
 symbol = ' '
+# Moduless
+[os]
+disabled = false
+style = "bg:#1b1f23 fg:#cdd6f4"
+
+[os.symbols]
+Windows = "󰍲"
+Ubuntu = "󰕈"
+SUSE = ""
+Raspbian = "󰐿"
+Mint = "󰣭"
+Macos = "" 
+Manjaro = ""
+Linux = "󰌽"
+Gentoo = "󰣨"
+Fedora = "󰣛"
+Alpine = ""
+Amazon = ""
+Android = ""
+Arch = "󰣇"
+Artix = "󰣇"
+CentOS = ""
+Debian = "󰣚"
+Redhat = "󱄛"
+RedHatEnterprise = "󱄛"
+
