--- a/stow/starship/.config/starship.toml
+++ b/stow/starship/.config/starship.toml
@@ -77,3 +77,8 @@ Debian = "󰣚"
 Redhat = "󱄛"
 RedHatEnterprise = "󱄛"
 
+[username]
+show_always = true
+style_user = "bg:#1b1f23 fg:#cdd6f4"
+style_root = "bg:#1b1f23 fg:#cdd6f4"
+format = '[ $user ]($style)'
