--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -17,6 +17,7 @@ brew 'lazygit'
 brew 'lazydocker'
 brew 'jq'
 brew 'make'
+brew 'mas'
 brew 'neovim'
 brew 'pv'
 brew 'ripgrep' # required for telescope
@@ -29,6 +30,7 @@ brew 'openssl'
 brew 'unzip'
 brew 'wget'
 brew 'zsh-autosuggestions'
+brew 'zero-sh/tap/apply-user-defaults'
 
 # Applications
 # cask 'slack'
