--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -10,6 +10,7 @@ brew 'btop'
 brew 'cmake'
 brew 'curl'
 brew 'coreutils'
+brew 'cmatrix'
 brew 'direnv'
 brew 'fzf'
 brew 'figlet'
@@ -26,6 +27,7 @@ brew 'ripgrep' # required for telescope
 brew 'sqlite'
 brew 'stow'
 brew 'starship'
+brew 'sl'
 brew 'tmux'
 brew 'tree'
 brew 'openssl'
