chore(brew): add comment

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -13,7 +13,7 @@ brew 'coreutils'
 brew 'cmatrix'
 brew 'direnv'
 brew 'fzf'
-brew 'figlet'
+brew 'figlet' # ascii art
 brew 'git'
 brew 'htop'
 brew 'lazygit'
