--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -1,8 +1,11 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:direct"
+
 set -g prefix C-s
-set -g mouse on
+set -g mouse off
 set-window-option -g mode-keys vi
 
 bind-key h select-pane -L
@@ -11,6 +14,12 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set-option -g status-position top
+set -g base-index 1
+set -g renumber-windows on
+set -g set-clipboard off
+set -g assume-paste-time 1
+set -g history-limit 10000
+set -s escape-time 0
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
