chore(brew): add alt-tab cask

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -48,6 +48,7 @@ cask '1password'
 cask 'qmk-toolbox'
 cask 'MonitorControl'
 cask 'rectangle'
+cask 'alt-tab'
 cask 'raycast'
 cask 'cleanshot'
 cask 'screen-studio'
