--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -5,7 +5,9 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:direct"
 
 set -g prefix C-s
-set -g mouse off
+
+set -g mouse on
+
 set-window-option -g mode-keys vi
 
 bind-key h select-pane -L
@@ -23,8 +25,9 @@ set -s escape-time 0
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#latest' # See https://github.com/catppuccin/tmux/tags for additional tags
 set -g @plugin 'christoomey/vim-tmux-navigator'
+# Forked based on issue: https://github.com/catppuccin/tmux/issues/129
+set -g @plugin 'mjyocca/tmux-catppuccin' # Fork
 
 # ~ 'catppuccin/tmux#latest' Configuration ~
 set -g @catppuccin_window_left_separator ""
