chore(brew): add fira code nerd font to cask

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -63,6 +63,9 @@ cask 'tower'
 cask 'gitbutler'
 cask 'orbstack'
 
+# Fonts
+cask 'font-fira-code-nerd-font'
+
 ###############
 # Mac App Store
 mas "system-color-picker", id: 1545870783
