feat(tmux): revamp tmux statusline

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -25,36 +25,74 @@ set -s escape-time 0
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/autoreload'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# Forked based on issue: https://github.com/catppuccin/tmux/issues/129
-set -g @plugin 'mjyocca/tmux-catppuccin' # Fork
 
 # ~ 'catppuccin/tmux#latest' Configuration ~
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-# ~ 'catppuccin/tmux#latest' Configuration ~
-set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_pane_active_border_style "fg=#{@thm_peach}" # Use a value compatible with the standard tmux 'pane-border-active-style'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+set -g @catppuccin_status_background "none"
 
-set -g @catppuccin_status_background "default"
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+# Configure Online
+set -g @online_icon "ok"
+set -g @offline_icon "nok"
 
+set -g status-style "bg=default"
+set -g status-justify "absolute-centre"
+
+# status left look and feel
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=default,fg=#{@thm_bg},bold]  #S },#{#[bg=default,fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=default,fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=default,fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=default,fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+# status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#[fg=#{@thm_green}] #(whoami) "
+set -ga status-right "#[bg=default,fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=default,fg=#{@thm_bg}]},#{#[bg=default,fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=default,fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=default]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=default,fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=default,fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=default,fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=default,fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
+
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "Window"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=default,fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=default,fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=default,fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=default,bold"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
