--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -2,7 +2,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:direct"
+set -ag terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-s
 
@@ -39,14 +39,25 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
-set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_status_enabled "no"
 set -g @catppuccin_pane_border_status "off"
-set -g @catppuccin_status_background "none"
+
+set -g @thm_custom_dark "#21262d"
+set -g @thm_custom_dark_blue "#121d2e"
+set -g @thm_custom_blue "#539bf5"
+set -g @thm_custom_fg "#c9d1d9"
+set -g @thm_custom_fg_2 "#89929b"
+
+# Override catpuccin pane border active styling
+set -ogq @catppuccin_pane_border_style "fg=#{@thm_custom_dark}" # "fg=#{@thm_surface_0}"
+set -ogq @catppuccin_pane_active_border_style "##{?pane_in_mode,fg=#{@thm_custom_fg_2},##{?pane_synchronized,fg=#{@thm_mauve},fg=#{@thm_custom_fg_2}}}"
 
 # Configure Online
 set -g @online_icon "ok"
 set -g @offline_icon "nok"
 
+# Configure Tmux
+set -g status-position top
 set -g status-style "bg=default"
 set -g status-justify "absolute-centre"
 
@@ -74,11 +85,8 @@ set -ga status-right "#[bg=default,fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 
 # pane border look and feel
 setw -g pane-border-status top
-setw -g pane-border-format ""
-setw -g pane-active-border-style "bg=default,fg=#{@thm_overlay_0}"
-setw -g pane-border-style "bg=default,fg=#{@thm_surface_0}"
+setw -g pane-border-format ''
 setw -g pane-border-lines single
-
 
 # window look and feel
 set -wg automatic-rename on
