chore(tmux): attribute config and theme to catpuccin tmux contributor

--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -34,6 +34,8 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+## NOTE: Theme/Styling contributed to https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
+
 # ~ 'catppuccin/tmux#latest' Configuration ~
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "macchiato"
