--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -15,6 +15,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+
 set-option -g status-position top
 set -g base-index 1
 set -g renumber-windows on
