chore(ghostty): add keybind to reload config

--- a/stow/ghostty/.config/ghostty/config
+++ b/stow/ghostty/.config/ghostty/config
@@ -25,3 +25,5 @@ keybind = cmd+shift+h=goto_split:left
 keybind = cmd+shift+j=goto_split:bottom
 keybind = cmd+shift+k=goto_split:top
 keybind = cmd+shift+l=goto_split:right
+
+keybind = cmd+shift+r=reload_config
