--- a/stow/ghostty/.config/ghostty/config
+++ b/stow/ghostty/.config/ghostty/config
@@ -28,18 +28,18 @@ keybind = global:ctrl+grave_accent=toggle_quick_terminal
 
 # NOTE: Testing out tmux style trigger sequence
 # instead of: `ctrl+s>h`, trying: `shift+s`.
-keybind = shift+s>h=goto_split:left
-keybind = shift+s>j=goto_split:bottom
-keybind = shift+s>k=goto_split:top
-keybind = shift+s>l=goto_split:right
+keybind = ctrl+s>h=goto_split:left
+keybind = ctrl+s>j=goto_split:bottom
+keybind = ctrl+s>k=goto_split:top
+keybind = ctrl+s>l=goto_split:right
 
 # Tmux style management for adding,removing,navigating splits
-keybind = shift+s>shift+5=new_split:right
-keybind = shift+s>shift+'=new_split:down
-keybind = shift+s>c=new_tab
-keybind = shift+s>n=next_tab
-keybind = shift+s>p=previous_tab
-keybind = shift+s>shift+7=close_surface
+keybind = ctrl+s>shift+5=new_split:right
+keybind = ctrl+s>shift+'=new_split:down
+keybind = ctrl+s>c=new_tab
+keybind = ctrl+s>n=next_tab
+keybind = ctrl+s>p=previous_tab
+keybind = ctrl+s>shift+7=close_surface
 
 # Reload Config
 keybind = cmd+shift+r=reload_config
