chore(stow/homebrew): update brewfile deps

--- a/stow/homebrew/Brewfile
+++ b/stow/homebrew/Brewfile
@@ -13,6 +13,7 @@ brew 'curl'
 brew 'coreutils'
 brew 'cmatrix'
 brew 'direnv'
+brew 'fd'
 brew 'fzf'
 brew 'figlet' # ascii art
 brew 'git'
@@ -37,6 +38,7 @@ brew 'stow'
 brew 'starship'
 brew 'sl'
 brew 'superfile'
+brew 'tfenv'
 brew 'tmux'
 brew 'tree'
 brew 'openssl'
